--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ h1 {
 
 p {
   font-family: verdana;
-  font-size: 20px;
+  font-size: 12px;
 }
 
 header {
@@ -21,6 +21,7 @@ header {
   width: 100%;
   height: 20px;
 }
+
 
 nav {
   margin-top: 20px;
@@ -83,6 +84,11 @@ li {
 .content {
   grid-area: content;
 }
+
+.footer {
+  grid-area: footer;
+}
+
 
 @media only screen and (min-width: 500px)  {
     .wrapper {
